# dart-mod-player

./: .gitignore  README.md  mod-player.dart  mono_pkg.yaml  player.dart  pubspec.yaml
example/: NoCorners.mod  dart_openmpt_example.dart  example.dart
lib/: dart_openmpt.dart  dart_openmpt_structs.dart
lib/OpenMPT/: CMakeLists.txt  OpenMPT-test  OpenMPT.def  make-library.sh  openmpt_library.cbp
lib/OpenMPT/src/: DataTypes.h  OpenMPT.cpp  OpenMPT.h  SoundManager.cpp  SoundManager.h  example.cpp  example.h
lib/cpp-lib-sources/: make-libopenmp.sh  make-libopenmpt.sh  make-openmpt.sh  make-portaudio.sh
lib/cpp-lib/libopenmpt/: libopenmpt.la  libopenmpt.lai
lib/cpp-lib/libportaudio/: libportaudio-symbols.expsym  libportaudio.lai
scripts/: make-openmpt.sh  make-portaudio.sh
songs/: Dungeon2.xm  Dungeon5.xm  Ending_Theme.xm  Logo_Reveal.xm  Main_Menu.xm
